--- a/data-scraper/chadha.ipynb
+++ b/data-scraper/chadha.ipynb
@@ -2,27 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [],
+   "execution_count": 12,
+   "id": "3b2f61774e3862ac",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-31T00:35:42.386492Z",
+     "start_time": "2024-03-31T00:35:31.568985Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pymongo\n",
+      "  Downloading pymongo-4.6.3-cp38-cp38-win_amd64.whl.metadata (22 kB)\n",
+      "Collecting dnspython<3.0.0,>=1.16.0 (from pymongo)\n",
+      "  Downloading dnspython-2.6.1-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Downloading pymongo-4.6.3-cp38-cp38-win_amd64.whl (472 kB)\n",
+      "   ---------------------------------------- 0.0/472.7 kB ? eta -:--:--\n",
+      "   --- ----------------------------------- 41.0/472.7 kB 653.6 kB/s eta 0:00:01\n",
+      "   --------- ------------------------------ 112.6/472.7 kB 1.3 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 225.3/472.7 kB 1.5 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 337.9/472.7 kB 1.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  471.0/472.7 kB 2.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 472.7/472.7 kB 1.7 MB/s eta 0:00:00\n",
+      "Downloading dnspython-2.6.1-py3-none-any.whl (307 kB)\n",
+      "   ---------------------------------------- 0.0/307.7 kB ? eta -:--:--\n",
+      "   -------------- ------------------------- 112.6/307.7 kB 2.2 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 204.8/307.7 kB 2.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  307.2/307.7 kB 2.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 307.7/307.7 kB 2.1 MB/s eta 0:00:00\n",
+      "Installing collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.6.1 pymongo-4.6.3\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import httpx\n",
     "import jmespath\n",
     "from bs4 import BeautifulSoup\n",
-    "import requests"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T10:50:07.233820500Z",
-     "start_time": "2024-03-30T10:50:07.208270200Z"
-    }
-   },
-   "id": "3b2f61774e3862ac"
+    "import requests\n",
+    "!pip install pymongo\n",
+    "import mongo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
+   "id": "33a29f27636c8ecd",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-31T00:31:29.583971Z",
+     "start_time": "2024-03-31T00:31:29.074290Z"
+    }
+   },
    "outputs": [],
    "source": [
     "client = httpx.Client(\n",
@@ -107,19 +142,18 @@
     "    )\n",
     "    data = json.loads(result.content)\n",
     "    return data[\"data\"][\"user\"]\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T10:50:07.299628900Z",
-     "start_time": "2024-03-30T10:50:07.221712800Z"
-    }
-   },
-   "id": "33a29f27636c8ecd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
+   "id": "c8c9ff7caa3d6f21",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-31T00:31:53.571844Z",
+     "start_time": "2024-03-31T00:31:53.545587Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def scrape_for_influencers():\n",
@@ -137,106 +171,98 @@
     "            username=href[44:length_url]\n",
     "            influencers.append(username)\n",
     "    print(influencers)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T10:50:07.300646600Z",
-     "start_time": "2024-03-30T10:50:07.252959400Z"
-    }
-   },
-   "id": "c8c9ff7caa3d6f21"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
+   "id": "7a0267178113de19",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-31T00:32:04.966588Z",
+     "start_time": "2024-03-31T00:32:04.950852Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def write_data(file,data):\n",
     "    with open(file,\"a\",encoding=\"utf-8\") as f:\n",
     "        json.dump(data,f,indent=4)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T10:50:07.301647100Z",
-     "start_time": "2024-03-30T10:50:07.267951400Z"
-    }
-   },
-   "id": "7a0267178113de19"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
+   "id": "3a3a59e1bed103f1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-31T00:32:09.375926Z",
+     "start_time": "2024-03-31T00:32:09.356821Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def load_data(file):\n",
     "    with open(file,\"r\",encoding=\"utf-8\") as f:\n",
     "        data=json.load(f)\n",
     "    return data"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T10:50:07.304301100Z",
-     "start_time": "2024-03-30T10:50:07.283478500Z"
-    }
-   },
-   "id": "3a3a59e1bed103f1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "outputs": [
-    {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 1 column 1 (char 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mJSONDecodeError\u001B[0m                           Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[57], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m influencers\u001B[38;5;241m=\u001B[39mload_data(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124minfluencers.json\u001B[39m\u001B[38;5;124m\"\u001B[39m)[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124minfluencers_list\u001B[39m\u001B[38;5;124m'\u001B[39m]\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m47\u001B[39m,\u001B[38;5;241m63\u001B[39m):\n\u001B[1;32m----> 3\u001B[0m     influencer_info\u001B[38;5;241m=\u001B[39mparse_user(\u001B[43mscrape_user\u001B[49m\u001B[43m(\u001B[49m\u001B[43minfluencers\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m)\n\u001B[0;32m      4\u001B[0m     write_data(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mscraped-data.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m,influencer_info)\n",
-      "Cell \u001B[1;32mIn[53], line 81\u001B[0m, in \u001B[0;36mscrape_user\u001B[1;34m(username)\u001B[0m\n\u001B[0;32m     77\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Scrape Instagram user's data\"\"\"\u001B[39;00m\n\u001B[0;32m     78\u001B[0m result \u001B[38;5;241m=\u001B[39m client\u001B[38;5;241m.\u001B[39mget(\n\u001B[0;32m     79\u001B[0m     \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mhttps://i.instagram.com/api/v1/users/web_profile_info/?username=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00musername\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m     80\u001B[0m )\n\u001B[1;32m---> 81\u001B[0m data \u001B[38;5;241m=\u001B[39m \u001B[43mjson\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mloads\u001B[49m\u001B[43m(\u001B[49m\u001B[43mresult\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcontent\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     82\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m data[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m\"\u001B[39m][\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124muser\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\json\\__init__.py:346\u001B[0m, in \u001B[0;36mloads\u001B[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001B[0m\n\u001B[0;32m    341\u001B[0m     s \u001B[38;5;241m=\u001B[39m s\u001B[38;5;241m.\u001B[39mdecode(detect_encoding(s), \u001B[38;5;124m'\u001B[39m\u001B[38;5;124msurrogatepass\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m    343\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\u001B[38;5;28mcls\u001B[39m \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m object_hook \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m\n\u001B[0;32m    344\u001B[0m         parse_int \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m parse_float \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m\n\u001B[0;32m    345\u001B[0m         parse_constant \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m object_pairs_hook \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m kw):\n\u001B[1;32m--> 346\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_default_decoder\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdecode\u001B[49m\u001B[43m(\u001B[49m\u001B[43ms\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    347\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mcls\u001B[39m \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m    348\u001B[0m     \u001B[38;5;28mcls\u001B[39m \u001B[38;5;241m=\u001B[39m JSONDecoder\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\json\\decoder.py:337\u001B[0m, in \u001B[0;36mJSONDecoder.decode\u001B[1;34m(self, s, _w)\u001B[0m\n\u001B[0;32m    332\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdecode\u001B[39m(\u001B[38;5;28mself\u001B[39m, s, _w\u001B[38;5;241m=\u001B[39mWHITESPACE\u001B[38;5;241m.\u001B[39mmatch):\n\u001B[0;32m    333\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001B[39;00m\n\u001B[0;32m    334\u001B[0m \u001B[38;5;124;03m    containing a JSON document).\u001B[39;00m\n\u001B[0;32m    335\u001B[0m \n\u001B[0;32m    336\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m--> 337\u001B[0m     obj, end \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mraw_decode\u001B[49m\u001B[43m(\u001B[49m\u001B[43ms\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43midx\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m_w\u001B[49m\u001B[43m(\u001B[49m\u001B[43ms\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mend\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    338\u001B[0m     end \u001B[38;5;241m=\u001B[39m _w(s, end)\u001B[38;5;241m.\u001B[39mend()\n\u001B[0;32m    339\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m end \u001B[38;5;241m!=\u001B[39m \u001B[38;5;28mlen\u001B[39m(s):\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\json\\decoder.py:355\u001B[0m, in \u001B[0;36mJSONDecoder.raw_decode\u001B[1;34m(self, s, idx)\u001B[0m\n\u001B[0;32m    353\u001B[0m     obj, end \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mscan_once(s, idx)\n\u001B[0;32m    354\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mStopIteration\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n\u001B[1;32m--> 355\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m JSONDecodeError(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mExpecting value\u001B[39m\u001B[38;5;124m\"\u001B[39m, s, err\u001B[38;5;241m.\u001B[39mvalue) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[0;32m    356\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m obj, end\n",
-      "\u001B[1;31mJSONDecodeError\u001B[0m: Expecting value: line 1 column 1 (char 0)"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2971efe22c904e7"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [
     "influencers=load_data(\"influencers.json\")['influencers_list']\n",
-    "for i in range(**,**):\n",
+    "for i in range(130,145):\n",
     "    influencer_info=parse_user(scrape_user(influencers[i]))\n",
-    "    write_data(\"scraped-data.txt\",influencer_info)"
+    "    write_data(\"scraped-dataaa.txt\",influencer_info)\n",
+    "    mongo.collection.insert_one(influencer_info)"
    ],
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-30T10:50:26.883890400Z",
-     "start_time": "2024-03-30T10:50:07.305633Z"
+     "end_time": "2024-03-31T00:45:12.860348Z",
+     "start_time": "2024-03-31T00:44:54.620145Z"
     }
    },
-   "id": "349b211702a68255"
+   "id": "349b211702a68255",
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5f7e4544c63825de"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
