aaded generate wordcloud to notebook need bios and usernames to execute it

--- a/data-cleaning/posts-cleaning.ipynb
+++ b/data-cleaning/posts-cleaning.ipynb
@@ -6431,6 +6431,47 @@
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "generate wordcloud need to the bios and username of the influencers",
+   "id": "762f9f4628ede40d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import uuid\n",
+    "from wordcloud import WordCloud\n",
+    "import services.influencers_sevice as influencers_service\n",
+    "import os\n",
+    "\n",
+    "influencers = influencers_service.get_influencers()\n",
+    "\n",
+    "def generate_wordcloud(text,username,foldername):\n",
+    "    # Generate the word cloud\n",
+    "    wordcloud = WordCloud(width=800, height=400, background_color='white').generate(text)\n",
+    "    #create folder structure\n",
+    "    folder_path = os.path.join('wordclouds', username, foldername)\n",
+    "    os.makedirs(folder_path, exist_ok=True)\n",
+    "\n",
+    "    unique_id = str(uuid.uuid4())[:8]  # Take the first 8 characters of the UUID\n",
+    "    filename = f'{foldername}_wordcloud_{unique_id}.png'\n",
+    "    #save wordcloud\n",
+    "    wordcloud.to_file(os.path.join(folder_path, filename))\n",
+    "    \n",
+    "def generate_wordcloud_bio(influencer):\n",
+    "    bio=influencer.get('bio')\n",
+    "    username = influencer.get('username')\n",
+    "    generate_wordcloud(bio,username,'bio')\n",
+    "    \n",
+    "for influencer in influencers:\n",
+    "    generate_wordcloud_bio(influencer)"
+   ],
+   "id": "f420657ddef38d3"
   }
  ],
  "metadata": {
