added export data stage in pipeline

--- a/model/data_transform.ipynb
+++ b/model/data_transform.ipynb
@@ -3,7 +3,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Transform our posts collection to prepare it for the model: ",
+   "source": [
+    "Transform our posts collection to prepare it for the model: \n",
+    "1- unset the shortcode field \n",
+    "2- group posts by owner id\n",
+    "3- concatenate captions\n",
+    "4- export data to a new collection"
+   ],
    "id": "2dca0e377cd1070f"
   },
   {
@@ -13,6 +19,9 @@
    "execution_count": null,
    "source": [
     "from pymongo import MongoClient\n",
+    "\n",
+    "# Requires the PyMongo package.\n",
+    "# https://api.mongodb.com/python/current\n",
     "\n",
     "client = MongoClient('mongodb://localhost:27017/')\n",
     "result = client['InfluencersMarketing']['newPosts'].aggregate([\n",
@@ -38,6 +47,11 @@
     "                    }\n",
     "                }\n",
     "            }\n",
+    "        }\n",
+    "    }, {\n",
+    "        '$out': {\n",
+    "            'db': 'InfluencersMarketing', \n",
+    "            'coll': 'Posts'\n",
     "        }\n",
     "    }\n",
     "])"
