--- a/model/data_transform.ipynb
+++ b/model/data_transform.ipynb
@@ -30,12 +30,15 @@
     "    }, {\n",
     "        '$group': {\n",
     "            '_id': '$owner.id', \n",
+    "            'post_ids': {\n",
+    "                '$push': '$$ROOT.id'\n",
+    "            }, \n",
     "            'posts': {\n",
     "                '$push': '$$ROOT.caption'\n",
     "            }\n",
     "        }\n",
     "    }, {\n",
-    "        '$project': {\n",
+    "        '$set': {\n",
     "            'posts': {\n",
     "                '$reduce': {\n",
     "                    'input': '$posts', \n",
