--- a/data-cleaning/posts-cleaning.ipynb
+++ b/data-cleaning/posts-cleaning.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2024-05-13T01:55:58.865404Z"
-    }
+    "collapsed": true
    },
    "source": [
     "!pip install deep-translator\n",
@@ -34,10 +28,7 @@
     "stopwords_en = stopwords.words('english')"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "4bdfaac799918d2b",
    "outputs": [],
@@ -51,15 +42,15 @@
     "        content = post.get(key)\n",
     "        try:\n",
     "            clean_content = re.sub('\\W+',' ', content )\n",
+    "            print(clean_content)\n",
+    "            influencers_service.update_post(post, key,clean_content)\n",
+    "\n",
     "        except Exception as e:\n",
     "            print(f\"An exception occurred: {e}. Skipping this caption.\") \n",
     "        "
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "ba435a6387fd3476",
    "outputs": [],
@@ -80,10 +71,7 @@
     "            print(f\"An exception occurred: {e}. Skipping this caption.\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "4c9b547054853015",
    "outputs": [],
@@ -103,10 +91,7 @@
     "    return lemmatized_text"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "b9c1d4b428e84f40",
    "outputs": [],
@@ -125,10 +110,7 @@
     "            print(f\"An exception occurred: {e}. Skipping this hashtag.\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "e502647a6b1bd2fb",
    "outputs": [],
@@ -143,10 +125,7 @@
     "    return text\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "eb47ecbec08729a8",
    "outputs": [],
@@ -162,10 +141,7 @@
     "        influencers_service.update_post(post, key, no_emoji_content)"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "aca08b191eeea65f",
    "outputs": [],
@@ -180,10 +156,7 @@
     "    return ' '.join(words)"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "698a284ba2691453",
    "outputs": [],
@@ -197,15 +170,13 @@
     "        content = post.get(key)\n",
     "        try:\n",
     "            no_stopwords_content = remove_stopwords(content, stopwords_en)\n",
+    "            print(no_stopwords_content)\n",
     "            influencers_service.update_post(post, key, no_stopwords_content)\n",
     "        except Exception as e:\n",
     "            print(f\"An exception occurred: {e}. Skipping this post\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "6f7b92f69f639d84",
    "outputs": [],
@@ -223,13 +194,13 @@
   },
   {
    "cell_type": "code",
-   "source": "translate_post(posts, 'posts')",
+   "source": [
+    "posts=influencers_service.get_posts()\n",
+    "translate_post(posts, 'captions')"
+   ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
-    "jupyter": {
-     "is_executing": true
-    }
+    "is_executing": true
    },
    "id": "ddde9d0e046c551f",
    "outputs": [],
@@ -237,9 +208,7 @@
   },
   {
    "cell_type": "raw",
-   "source": [
-    "remove emojis"
-   ],
+   "source": "     remove emojis",
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "source": "remove_post_emojis(posts, 'posts')",
+   "source": "remove_post_emojis(posts, 'captions')",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -272,13 +241,10 @@
    "cell_type": "code",
    "source": [
     "posts=influencers_service.get_posts()\n",
-    "remove_post_stopwords(posts, 'posts')"
+    "remove_post_stopwords(posts, 'captions')"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "1f5fb1e0eb43b23d",
    "outputs": [],
@@ -296,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "source": "lemmatize_post(posts, 'posts')",
+   "source": "lemmatize_post(posts, 'captions')",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -329,13 +295,10 @@
    "cell_type": "code",
    "source": [
     "posts=influencers_service.get_posts()\n",
-    "remove_special_caracters(posts,'posts')"
+    "remove_special_caracters(posts,'captions')"
    ],
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    }
+    "collapsed": false
    },
    "id": "ed7396f8b345d852",
    "outputs": [],
