update cleaning script

--- a/data-cleaning/posts-cleaning.ipynb
+++ b/data-cleaning/posts-cleaning.ipynb
@@ -196,7 +196,7 @@
    "cell_type": "code",
    "source": [
     "posts=influencers_service.get_posts()\n",
-    "translate_post(posts, 'captions')"
+    "translate_post(posts, 'posts')"
    ],
    "metadata": {
     "collapsed": false,
@@ -216,7 +216,10 @@
   },
   {
    "cell_type": "code",
-   "source": "remove_post_emojis(posts, 'captions')",
+   "source": [
+    "posts=influencers_service.get_posts()\n",
+    "remove_post_emojis(posts, 'posts')"
+   ],
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -241,7 +244,7 @@
    "cell_type": "code",
    "source": [
     "posts=influencers_service.get_posts()\n",
-    "remove_post_stopwords(posts, 'captions')"
+    "remove_post_stopwords(posts, 'posts')"
    ],
    "metadata": {
     "collapsed": false
@@ -262,7 +265,10 @@
   },
   {
    "cell_type": "code",
-   "source": "lemmatize_post(posts, 'captions')",
+   "source": [
+    "posts=influencers_service.get_posts()\n",
+    "lemmatize_post(posts, 'posts')"
+   ],
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -295,7 +301,7 @@
    "cell_type": "code",
    "source": [
     "posts=influencers_service.get_posts()\n",
-    "remove_special_caracters(posts,'captions')"
+    "remove_special_caracters(posts,'posts')"
    ],
    "metadata": {
     "collapsed": false
