--- a/model/LDA-model.ipynb
+++ b/model/LDA-model.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "from gensim.utils import simple_preprocess\n",
     "from gensim.models import CoherenceModel\n",
-    "import services.influencers_sevice as influencers_service\n",
+    "import services.influencers_service as influencers_service\n",
     "#visualisation \n",
     "import pyLDAvis\n",
     "import pyLDAvis.gensim\n",
